<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nico.jobbyjob.login.LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:background="@color/colorSecondary">

    <Button
        android:id="@+id/btnGoogleSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGoogle"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/btnGoogleSignIn" />

    <Button
        android:id="@+id/btnFacebookSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFacebook"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/btnFacebookSignIn" />

    <Button
        android:id="@+id/btnTwitterSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTwitter"
        android:drawableStart="@drawable/ic_twitter"
        android:text="@string/btnTwitterSignIn" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/txvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtUser"
        android:text="@string/txvUser"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoComplete"
        android:layout_marginBottom="@dimen/edtUser_margin"
        android:background="@drawable/shape_edittext"
        style="@style/LoginEditText"/>

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtPassword"
        android:text="@string/txvPassword"
        android:textAppearance="@android:style/TextAppearance.Small" />


    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:background="@drawable/shape_edittext"
        style="@style/LoginEditText"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/llySignInOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Widget.Button.Transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnSignIn"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.Button.Transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/colorSecondaryDark"
            android:text="@string/btnSignUp"
            android:layout_margin="20dp"/>

    </LinearLayout>
</LinearLayout>

